:sparkles: Add verify-register and confirm-register api.
